When activating the "Select Side of Plane" a second time (with some other operation like selection) in between the GizmoGroup is not found anymore:
Traceback (most recent call last):
File "/gizmo_operator.py", line 71, in invoke
RuntimeError: Error: Gizmo group type 'MESH_GGT_select_side_of_plane' not found!
location: <unknown location>:-1