Fix T58474: Gizmo Operator template fails on rerun